--- a/nginx.conf
+++ b/nginx.conf
@@ -32,8 +32,10 @@ http {
     location / {
       proxy_pass http://server1:3000;
 
-      limit_req zone=munglimit burst=3 nodelay;
+      limit_req zone=munglimit burst=4 nodelay;
       limit_req_status 429;
+      # limit_req_dry_run on;
+      # limit_req_log_level error;
 
       proxy_set_header X-Real-IP $remote_addr;
       proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
@@ -44,6 +46,7 @@ http {
   log_format  main  '$remote_addr - $remote_user [$time_local] "$request" '
                     '$status $body_bytes_sent "$http_referer" '
                     '"$http_user_agent" "$http_x_forwarded_for"';
+  
   access_log  /var/log/nginx/access.log  main;
 
   sendfile        on;
